--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#e6e7e6" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A free and open source Tezos community tool for verifying message signing standards compliance along with some other fun features."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>tezter.xyz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
